--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,19 +8,24 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" />
+        <activity android:name=".SplashActivity" />
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".PerfilActivity" />
+        <activity android:name=".RegistroActivity" />
+        <activity android:name=".FragmentexActivity">
 
         </activity>
-        <activity android:name=".SplashActivity" />
-        <activity android:name=".LoginActivity" >
+        <activity
+            android:name=".ParquesActivity"
+            android:label="@string/title_activity_parques"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PerfilActivity" />
-        <activity android:name=".RegistroActivity"></activity>
     </application>
 
 </manifest>
